--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,1 +1,37 @@
+<% include ../partials/header %>
 
+<div class="container">
+    <div class="row">
+        <h1 class="h1-style">Edit <%= campground.name %></h1>
+        <div class="div-form-style">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="campground[name]">Name</label>
+                    <input class="form-control" type="text" name="campground[name]" value="<%=campground.name%>">
+                </div>
+                <div class="form-group">
+                    <label for="campground[price]">Price</label>
+                    <input class="form-control" type="number" name="campground[price]" value="<%=campground.price%>" min="0.01" step="0.01">
+                </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="location" value="<%= campground.location %>">
+                </div>
+                <div class="form-group">
+                    <label for="campground[image]">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*">        
+                </div>
+                <div class="form-group">
+                    <label for="campground[description]">Description</label>
+                    <input class="form-control" type="text" name="campground[description]" value="<%=campground.description%>">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-success btn-block">Update</button>
+                </div>
+            </form>
+            <a href="/campgrounds/<%= campground._id %>">Go Back</a>
+        </div>
+    </div>
+</div>
+
+<% include ../partials/footer %>
