--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,14 +2,14 @@
 
 <div class="container">
     <div class="row">
-        <h1 class="h1-style">Edit Comment</h1>
+        <h1 class="h1-style">Add new Comment to <%= campground.name %></h1>
         <div class="div-form-style">
-            <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+            <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+                    <input class="form-control" type="text" name="comment[text]" placeholder="Text">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-success btn-block">Update</button>
+                    <button class="btn btn-lg btn-success btn-block">Submit</button>
                 </div>
             </form>
             <a href="/campgrounds">Go Back</a>
