--- a/views/change.ejs
+++ b/views/change.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align: center; font-weight: bold; color: #505356">Change Password Form</h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/changepw" method="POST">
+            <form action="/campgrounds/pw/changepw" method="POST">
                 <legend>Enter registered e-mail id for further instructions</legend>
                 <div class="form-group">
                     <label for="email">Email</label>
