--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
                 <button class="btn btn-lg btn-primary btn-block">Login</button>
             </div>
         </form>
-        <a href="/changepw">Forgot Password?</a>
+        <a href="/campgrounds/changepw">Forgot Password?</a>
         <span><a href="/campgrounds" class="pull-right">Go Back</a></span>
     </div>
 </div>
