--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,14 @@
                             <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
                         <% } else { %>
                             <li class="navbar-text">Signed in as <%= currentUser.username %></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/campgrounds/profile/<%= currentUser._id %>">View Profile</a></li>
+                                    <li><a href="/campgrounds/profile/<%= currentUser._id %>/edit">Edit Profile</a></li>
+                                    <li><a href="/campgrounds/pw/changepw">Change Password</a></li>
+                                </ul>
+                            </li>
                             <li><a href="/logout">Logout</a></li>
                         <% } %>
                     </ul>
