--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
     <div style="width: 30%; margin: 25px auto;">
         <form action="/register" method="post">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">Username (Note: Username cannot be changed later)</label>
                 <input class="form-control" type="text" name="username" placeholder="Camping Lover" required>
             </div>
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label for="adminCode">Admin Code</label>
-                <input class="form-control" type="text" name="adminCode" placeholder="Admin Code">
+                <input class="form-control" type="password" name="adminCode" placeholder="Admin Code">
             </div>
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
