--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -2,13 +2,11 @@
 <div class="row">
 	<h1 style="text-align: center; font-weight: bold; color: #505356">Reset Password</h1>
     <div style="width: 30%; margin: 25px auto;">
-		<form action="/reset/<%= token %>" method="POST">
+		<form action="/campgrounds/reset/<%= token %>" method="POST">
 		    <legend>Reset Password</legend>
 		    <div class="form-group">
-		        <label class="col-sm-2 control-label">Username</label>
-			    <div class="col-sm-10">
-			      <p class="form-control-static"><%= user.username %></p>
-			    </div>
+		        <label class="control-label">Username</label>
+			    <p class="form-control-static" style="font-size: 1.25em; color: #505356"><%= user.username %></p>
 		    </div>
 		    <div class="form-group">
 		        <label for="password">New Password</label>
@@ -19,7 +17,7 @@
     		    <input type="password" name="confirm" value="" placeholder="Confirm password" class="form-control"/>
     		</div>
     		<div class="form-group">
-    	        <button type="submit" class="btn btn-primary">Update Password</button>
+    	        <button type="submit" class="btn btn-success">Update Password</button>
     		</div>
 		</form>
 	</div>
